--- a/.github/workflows/unpack.yml
+++ b/.github/workflows/unpack.yml
@@ -14,9 +14,14 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Power Platform CLI
+        shell: pwsh
         run: |
-          dotnet tool install --global Microsoft.PowerPlatform.CLI
-          echo "$env:PATH;$HOME\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Append
+          dotnet tool install --global Microsoft.PowerApps.CLI.Tool
+          "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Append -Encoding utf8
+
+      - name: Verify pac
+        shell: pwsh
+        run: pac --version
 
       - name: Auth to PP-DEV
         run: |
