--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,10 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Install Power Platform CLI
+        shell: pwsh
         run: |
-          dotnet tool install --global Microsoft.PowerPlatform.CLI
-          echo "$env:PATH;$HOME\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Append
+          dotnet tool install --global Microsoft.PowerApps.CLI.Tool
+          "$env:USERPROFILE\.dotnet\tools" | Out-File -FilePath $env:GITHUB_PATH -Append -Encoding utf8 
 
       - name: Select target variables
         id: target
