--- a/.github/workflows/unpack.yml
+++ b/.github/workflows/unpack.yml
@@ -56,3 +56,17 @@ jobs:
           commit_message: "chore: export & unpack solutions from DEV"
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Export Core (managed)
+        run: |
+          pac solution export --name Core --path solutions/Core/managed/Core_managed.zip --managed true --overwrite true
+
+      - name: Export Automate (managed)
+        run: |
+          pac solution export --name Automate --path solutions/Automate/managed/Automate_managed.zip --managed true --overwrite true
+
+      - name: Upload managed solutions as artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: managed-solutions
+          path: solutions/**/managed/*.zip
